themes/biztrox-hugo-modified/static/css/custom.css
/* Typography */
.ignore-list-style {
    list-style-type: none;
}
.post-content h4, .post-content h5 {
    margin-top: 20px;
    margin-bottom: 10px;
}

.post-content li {
    font-weight: 400;
    color: #666;
    font-size: 14px;
    line-height: 25px;
    font-family: "Open Sans", sans-serif;
}

.post-content ol {
    margin-bottom: 10px;
}

.post-content ol li::before {
    content: "";
}

.post-img {
    max-height: 200px;
}

.post-single-img {
    max-height: 250px;
}

blockquote p {
    margin-bottom: 0px;
}

.meta {
    font-family: "Poppins", sans-serif;
}

/* General */
.btn-slim {
    padding: 10px 25px 10px 25px;
}

.card2 {
    margin-bottom: 30px;
    padding: 20px 30px 20px 30px;
}

.max-width-relative {
    max-width: 100%;
}

.card-title-text {
    margin-left: 15px;
}

.badge-weight-500 {
    font-weight: 500;
}

.badge-gray-outline {
    color: #666;
    border: 1px solid #666;
}

.post-content img {
    max-width: 100%;
}

#mce-responses {
    color: white;
}

/* Content list

   Making lists look okay since netlify-cms when adding lists creates a sibling in the paragraph element
   instead of a child. Thus an unnecessary margin is present that makes the document look weird.
*/
.post-content p {
    margin-bottom: 0;
}

p + p, ul + p {
    margin-top: 15px;
}

p + h1, p + h2, p + h3, p + h4, p + h5, p + h6 {
    margin-top: 30px;
}

/* End content list */

.link-red:link, .link-red:visited, .link-red:active {
    color: #e84444;
}

.link-red:hover {
    color: #007bff;
}

.bg-github {
    background-color: #364145;
}

ol, ul {
    list-style-type: disc;
    margin: 0px;
}

/* Header */

/* Ugly hacks for logo in header */
.logo-image {
    max-width: 85%;
}

.navigation .navbar-brand {
    position: unset;
    top: 0px;
    height: 0px;
    background: transparent;
    box-shadow: unset;
}

.navigation .navbar-brand img {
    position: unset;
    top: 0px;
}
@media (max-width: 991px) {
    .navigation .navbar-brand img {
        height: 50px;
        width: auto;
        max-width: unset;
        padding: .5rem 1rem;
    }
    .navigation .navbar {
        padding: .5rem 1rem;
    }
}
/* End ugly hacks for logo in header */

/* Footer */
.footer-links li a {
    margin-bottom: 10px;
    font-size: unset;
    display: unset;
}

.footer-links li {
    margin-bottom: 15px;
}

.footer-links li li {
    margin-bottom: 5px;
}

.footer-links ul li ul {
    margin-top: 5px;
}

.footer-links-primary {
    font-family: "Open Sans", sans-serif;
}
.footer-links-secondary {
}

.footer-links > li > ul > li::before {
    font-size: x-small;
    top: 5px;
}
.footer-links li a:hover {
    text-decoration-line: unset;
}

/* Homepage */

.homepage-slider h1, .homepage-slider h4 {
    color: white;
    text-shadow: 1px 1px 1px black;
}

.homepage-main-content p {
    font-size: larger;
    margin-left: 20px;
    margin-right: 20px;
}

.homepage-slider.slick-slider {
  margin-bottom: 0;
}

.stranke-button {
    position: absolute;
    top: 43%;
}

.stranke-button button{
    padding: 10px 15px !important;
}

.stranke-button-left {
    left: 0%;
}

.stranke-button-right {
    right: 0%;
}

.slick-list {
    margin-left: 5%;
    margin-right: 5%;
}

/* Koledar */
#calendar {
    max-width: 900px;
    margin: 0 auto;
    margin-right: 15px;
}

.fc-event, .fc-event-dot {
    background-color: #e84444;
}

.fc-event {
    border: 1px solid #e84444;
}

.fc-today-button, .fc-prev-button, .fc-next-button {
    padding: 10px;
    border-radius: 20px;
}

.fc-prev-button {
    padding-left: 15px;
    padding-right: 20px;
}

.fc-next-button {
    padding-left: 20px;
    padding-right: 15px;
}

.fc-today {
    background-color: #ff989829;
    color: #212529;
}

/* Pagination */
.pagination .page-item .page-link {
    border: 1px solid #dee2e6;
    background: unset;
}


.pagination .page-item .page-link a {
    color: #e84444;
}
.pagination .page-item .page-link a:hover {
    color: #007bff;
}


.pagination .page-item.active .page-link {
    background-color: #e84444;
}
.pagination .page-item.active .page-link a {
    color: white;
}

.pagination .page-item.disabled .page-link a {
    color: grey;
}

/* Izobrazevanja za podjetja */
.izobrazevanja-za-podjetja-filter ul li {
    padding: 5px 20px;
    border-radius: 35px;
    color: #222;
    font-size: 16px;
    font-weight: 400;
    border: 1px solid #e5e5e5;
    cursor: pointer;
    background: #f5f5f5;
    margin: 0 8px 15px;
}

.izobrazevanja-za-podjetja-filter ul li.active {
    background: #e84444;
    color: #fff;
}

.izobrazevanja-za-podjetja-info {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: rgba(0, 0, 0, 0.7);
    opacity: 0;
    transition: .2s ease;
}

.izobrazevanja-za-podjetja-info a {
    color: #fff;
    position: absolute;
    left: 30px;
    bottom: 40px;
    -webkit-transform: translateY(20px);
    transform: translateY(20px);
    opacity: 0;
}

.izobrazevanja-za-podjetja-info a:hover {
    color: #e84444;
}

.izobrazevanja-za-podjetja-info p {
    position: absolute;
    left: 25px;
    bottom: 0;
    color: #fff;
    transition: .2s ease;
    -webkit-transform: translateY(20px);
    transform: translateY(20px);
    opacity: 0;
    transition-delay: .1s;
}

.izobrazevanja-za-podjetja-info p i {
    margin-right: 5px;
}

.izobrazevanja-za-podjetja-info:hover {
    opacity: 1;
}

.izobrazevanja-za-podjetja-info:hover a {
    -webkit-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
}

.izobrazevanja-za-podjetja-info:hover p {
    -webkit-transform: translateY(0);
    transform: translateY(0);
    opacity: .7;
}

/* 19.3 project single page start */

.izobrazevanja-za-podjetja-content h3{
    margin-bottom: 10px;
}

.izobrazevanja-za-podjetja-content p{
    margin-bottom: 40px;
}

.izobrazevanja-za-podjetja-content img{
    margin-bottom: 10px;
    max-width: 100%;
    height: auto
}

.izobrazevanja-za-podjetja-content h6{
    font-family: "Open Sans", sans-serif;
    font-weight: 600;
    font-size: 14px;
    color: #222;
    margin-bottom: 25px;
    position: relative;
    margin-left: 20px;
}
.izobrazevanja-za-podjetja-content h6::before{
    position: absolute;
    content: "\e65d";
    font-family: "themify";
    top: 0;
    left: -20px;
    color: #e84444;
}

